# mosoro-adapters-community

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
adapters/_template/: README.md  template.yaml  template_adapter.py
adapters/fetch/: README.md  __init__.py  fetch.yaml  fetch_adapter.py  pyproject.toml
adapters/geekplus/: __init__.py  geekplus.yaml  geekplus_adapter.py  pyproject.toml
adapters/locus/: __init__.py  locus.yaml  locus_adapter.py  pyproject.toml
adapters/mir/: __init__.py  mir.yaml  mir_adapter.py  pyproject.toml
adapters/stretch/: README.md  __init__.py  pyproject.toml  stretch.yaml  stretch_adapter.py
tests/: test_adapter_contract.py
