[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosoro-adapters-community"
version = "0.1.0"
description = "Community-contributed robot adapters for Mosoro Core"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "Mosoro Community"}]
dependencies = ["mosoro-core>=1.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0"]

[project.urls]
Repository = "https://github.com/mosoro/mosoro-adapters-community"
