[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosoro-adapters-community"
version = "0.1.0"
description = "Community-contributed robot adapters for Mosoro Core"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "Mosoro Community"}]
dependencies = [
    "mosoro-core>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
stretch = ["roslibpy>=1.4.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0", "roslibpy>=1.4.0"]

[project.urls]
Repository = "https://github.com/mosoroio/mosoro-adapters-community"

[project.entry-points."mosoro.adapters"]
fetch = "adapters.fetch:FetchAdapter"
geekplus = "adapters.geekplus:GeekplusAdapter"
locus = "adapters.locus:LocusAdapter"
mir = "adapters.mir:MirAdapter"
stretch = "adapters.stretch:StretchAdapter"

[tool.setuptools.packages.find]
include = ["adapters*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
