[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosoro-adapters-community"
version = "1.0.0"
description = "Meta-package: installs all community robot adapters for Mosoro Core"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{name = "Mosoro Community"}]
dependencies = [
    "mosoro-adapter-locus>=1.0.0",
    "mosoro-adapter-mir>=1.0.0",
    "mosoro-adapter-fetch>=1.0.0",
    "mosoro-adapter-geekplus>=1.0.0",
    "mosoro-adapter-stretch>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0", "roslibpy>=1.4.0"]

[project.urls]
Repository = "https://github.com/mosoroio/mosoro-adapters-community"

# Entry points kept for backward compatibility when installing the meta-package
# directly. Individual adapter packages also register their own entry points.
[project.entry-points."mosoro.adapters"]
fetch = "adapters.fetch:FetchAdapter"
geekplus = "adapters.geekplus:GeekplusAdapter"
locus = "adapters.locus:LocusAdapter"
mir = "adapters.mir:MirAdapter"
stretch = "adapters.stretch:StretchAdapter"

[tool.setuptools.packages.find]
include = ["adapters*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
