[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosoro-adapter-geekplus"
version = "1.0.0"
description = "Geekplus / Seer AMR adapter for Mosoro"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "mosoro-core>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.entry-points."mosoro.adapters"]
geekplus = "adapters.geekplus:GeekplusAdapter"
